# shopify_theme_utils

./: .gitignore  example.py  pyproject.toml  setup.py  test_theme_sort.py  theme_download.sh
shopify_theme_utils/: colour_list.py  delete_liquid_conflict_files.py  example.py  remove_app_blocks.py  shopify_theme_utils.py  shopify_utils.py  test.py  theme_command_runner.py  theme_push.py  theme_push_dev.sh  theme_push_prod_ca.sh  theme_push_prod_us.sh  theme_sync.sh
