[tool.poetry]
name = "shopify-theme-utils"
version = "0.1.0"
description = ""
authors = ["Josh Kremer <joshkremer@gmail.com>"]
readme = "README.md"
packages = [{include = "shopify_theme_utils"}]

[tool.poetry.dependencies]
python = ">=3.10.4,<4.0"
rich = "^13.3.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
