[project]
name = "shopify-theme-utils"
version = "0.2.0"
description = ""
authors = [
    {name = "Josh Kremer",email = "joshkremer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.00,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
