[project]
name = "shopify-theme-utils"
version = "0.2.0"
description = ""
authors = [
    {name = "Josh Kremer",email = "joshkremer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8.0,<4.0"

dependencies = [
    "rich (>=14.2.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
